--- a/css/style.css
+++ b/css/style.css
@@ -118,14 +118,15 @@ main.content {
   position: absolute;
   top: 10px;
   left: 10px;
-  background: #cd496c;
-  color: #fff;
+  background: #efc75e;   /* mesma cor do footer */
+  color: #cd496c;        /* texto em amarelo */
   font-weight: bold;
-  padding: 0.4rem 0.8rem;
-  border-radius: 6px;
   font-size: 0.9rem;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+  padding: 5px 10px;
+  border-radius: 5px;
+  z-index: 10;
 }
+
 
 /* Preços */
 .preco-antigo {
